--- a/index-jp.html
+++ b/index-jp.html
@@ -38,6 +38,7 @@
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
       <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
 	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
+<p>決勝には、予選応募チームより16チームが選抜される予定です。うち少なくとも10チームは予選におけるレーティング順により選抜され、残りのチームは地域バランス等も考慮のうえ選抜される予定です。</p>
     </section>
     <section id="news">
       <h2>ニュース</h2>
