--- a/index-jp.html
+++ b/index-jp.html
@@ -19,6 +19,7 @@
         <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
         <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
@@ -30,10 +31,9 @@
 </header>
 <hr/>
 
-
     <section id="main">
       <h2>情報処理学会 国際AIプログラミングコンテスト: SamurAI Coding 2014-15</h2>
-      <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト 
+      <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト
 	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました（<a href="2012photos.html">2012年度決勝の様子</a>、
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
       <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
@@ -60,16 +60,16 @@
       <p>最初に <a href="http://arena.ai-comp.net/users/sign_up">オンライン対戦サーバ</a>上でチームにつき一つのアカウントを作成してください。
 続いて、チームの情報を <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">参加登録</a> してください。
 参加登録後は、<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a> ならびに <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a> を参照のうえ、<a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a> にログインし自身のAIプログラムのAIプログラムのアーカイブファイルをzip, tar, tar.bz2, tar.gzのいずれかの形式で投稿してください。 投稿方法の詳細についてはサーバ上の <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> を参照してください。
-	
+
 </p>
     </section>
 
     <section id="prize">
       <h2>特典</h2>
-      
+
       <b>予選応募者（決勝出場者を含む）</b>
 
-<p>      
+<p>
 予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）。予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます。
 </p>
 <p>
@@ -105,31 +105,44 @@
       </ul>
     </section>
 
-<section id="game">
-<h2>ゲーム内容</h2>
-<p>
-本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
-参加者はプログラミングスキルに加えて、
-アルゴリズムやAIストラテジーの設計スキルで競い合います。
-題材となるゲームでは、
-プレイヤーが戦国大名になり、領主たちを交渉で味方に引き入れ、
-他の大名たちと争います。
-</p>
-<p>
-プログラミング言語としては、C、C++、C#、Java、Objective-C、PHP、Python、Ruby、Clojure、D、Erlang、
-Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応しています。
-</p>
-</section>
+    <section id="game">
+      <h2>ゲーム内容</h2>
+      <p>
+        本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
+        参加者はプログラミングスキルに加えて、
+        アルゴリズムやAIストラテジーの設計スキルで競い合います。
+        題材となるゲームでは、
+        プレイヤーが戦国大名になり、領主たちを交渉で味方に引き入れ、
+        他の大名たちと争います。
+      </p>
+      <p>
+        プログラミング言語としては、C、C++、C#、Java、Objective-C、PHP、Python、Ruby、Clojure、D、Erlang、
+        Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応しています。
+      </p>
+    </section>
+
     <section class="centered">
       <img src="images/ss1.png" width="300" title="Screenshot"/>
       <img src="images/ss2.png" width="300" title="Screenshot"/>
     </section>
 
+    <section id="game">
+      <h2>過去のコンテストとの違い</h2>
+      <p>
+        SamurAI CodingではCEDEC、JavaChallenge、A.I. Challenge @ CODE FESTIVALで使用したゲームをベースにしたゲームを題材として扱っています。
+        ゲーム内容は一見類似していますが、AIプログラムに必要とされる戦略は大きく異なり、過去に使用したAIプログラムに勝ち目はないでしょう。
+        例えば、本コンテストでの大きな変更として、ゲームの途中で全情報が開示されることに加え、総兵力（得点）の計算も行われます。
+        開示情報と中間の総兵力を踏まえて、ゲーム後半に戦術を練り直すことが重要です。強力なアルゴリズムのアイデアをお待ちしております。
+        なお、実際に過去のコンテストの優勝者はそれぞれ異なっており、SamurAI Codingに初めて挑戦される方にも優勝のチャンスがあります。
+        SamurAI Codingに初めて挑戦する皆様、過去のコンテストに参加した皆様、最強のAIプログラムを投稿して、日本の古都、京都で会いましょう！
+      </p>
+    </section>
+
     <section id="committee">
       <h2>委員会体制（2014.5現在）</h2>
-<p>鷲崎弘宜（早稲田大学, 委員長）, 竹内郁雄（東京大学名誉教授, エグゼクティブアドバイザー), 近山隆（東京大学名誉教授）, 
-高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 松原仁（はこだて未来大学）, 坂本一憲（国立情報学研究所）, 
-田中哲朗（東京大学）, 本田澄（早稲田大学）, 平石拓（京都大学）, 佐藤靖治（早稲田大学）, 
+<p>鷲崎弘宜（早稲田大学, 委員長）, 竹内郁雄（東京大学名誉教授, エグゼクティブアドバイザー), 近山隆（東京大学名誉教授）,
+高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 松原仁（はこだて未来大学）, 坂本一憲（国立情報学研究所）,
+田中哲朗（東京大学）, 本田澄（早稲田大学）, 平石拓（京都大学）, 佐藤靖治（早稲田大学）,
 安本慶一（奈良先端科学技術大学院大学）, 新田淳（日立製作所）
 </p>
     </section>
