--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
         <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
@@ -34,13 +35,13 @@
     	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2014-15</h2>
       </header>
       <p>As the Internet industry rapidly grows, there is an intensifying need for high quality engineers and programmers.
-	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012 and 2013, 
+	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012 and 2013,
 aiming to cultivate the younger generation so they can become leading researchers,
-	developers and successful on global level 
+	developers and successful on global level
 	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
       <p>3rd SamurAI Coding will be held between September 2014 and March 2015.
-	Contestants will compete their engineering skills for AI game programming. 
+	Contestants will compete their engineering skills for AI game programming.
 	Winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
 	Participating engineers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
@@ -48,7 +49,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       <h2>News</h2>
       <ul>
         <li>Dec 13: Information about the <a href="preliminary.html">preliminary round</a> and the <a href="final.html">final round</a> has been added.
-        <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added. 
+        <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added.
       	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> have been resolved.
         <li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
         <li>May 1: This preliminary website has been launched.
@@ -60,14 +61,14 @@ aiming to cultivate the younger generation so they can become leading researcher
 
 <p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
       <p>Firstly, make your team account on <a href="http://arena.ai-comp.net/users/sign_up">Online Execution Server</a>.
-After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>. 
-Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details. 
-<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rule</a> and 
+After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>.
+Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details.
+<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rule</a> and
 <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI program</a> are available. </p>
 
    <section id="prize">
       <h2>Prize</h2>
-      
+
       <p>
       <b>For Preliminary round contestants (including World Finalists): </b>
       </p>
@@ -86,10 +87,10 @@ Then submit an archive file of your AI programs to <a href="http://arena.ai-comp
 
       <p>Travel expenses of World final contestants will be partially supported.
 World Final will be held in the beautiful ancient city of Kyoto, Japan.
-Kyoto is named the <a href="http://kyoto.travel/">World's Best City in the Travel + Leisure</a>. 
-Last year World final contestants from out side of Japan received 
+Kyoto is named the <a href="http://kyoto.travel/">World's Best City in the Travel + Leisure</a>.
+Last year World final contestants from out side of Japan received
 travel expenses up to 100,000JPY, and contestants from a long distance
-within Japan received full travel expenses. 
+within Japan received full travel expenses.
 </p>
       <p>All World Final contestants will be presented on the contest site. </p>
     </section>
@@ -107,7 +108,7 @@ within Japan received full travel expenses.
 <section id="game">
       <h2>Game and AI</h2>
 <p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills by creating AI program for a match-up game. Players act as "daimyo" (powerful feudal lords in pre-modern Japan) to compete with one another by drawing neutral liege lords to their side.</p>
-<p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p> 
+<p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p>
 </section>
     <section class="centered">
       <img src="images/ss1.png" width="300" title="Screenshot"/>
@@ -117,8 +118,8 @@ within Japan received full travel expenses.
     <section id="committee">
       <h2>Committee</h2>
 
- <p>Hironori Washizaki (Director), Ikuo Takeuchi (Executive Advisor), 
- Takashi Chikayama, Shingo Takada, Matsuki Yoshino,  Hitoshi Matsubara, Kazunori Sakamoto, 
+ <p>Hironori Washizaki (Director), Ikuo Takeuchi (Executive Advisor),
+ Takashi Chikayama, Shingo Takada, Matsuki Yoshino,  Hitoshi Matsubara, Kazunori Sakamoto,
  Tetsuro Tanaka, Kiyoshi Honda, Tasuku Hiraishi, Seiji Sato, Keiichi Yasumoto, Jun Nitta
  </p>
     </section>
