--- a/rule-jp.html
+++ b/rule-jp.html
@@ -16,13 +16,14 @@
   <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="#">日程</a></li>
-        <li><a href="rule-jp.html">ルール</a></li>
-        <li><a href="#">ソフトウェア</a></li>
-        <li><a href="#">参加登録</a></li>
-        <li><a href="#">予選</a></li>
-        <li><a href="#">決勝</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="schedule-jp.html">日程</a></li>
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
+        <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
+        <li><a href="preliminary-jp.html">予選</a></li>
+        <li><a href="final-jp.html">決勝</a></li>
+        <li><a href="faq-jp.html">FAQ</a></li>
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -53,7 +54,7 @@ C, C++, C#, Java, Scala, Ruby, Python, Perl, PHP, Haskell, JavaScript
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-                samurai2014-contact@ipsj.or.jp</a></p>        
+                samurai2014-contact@ipsj.or.jp</a></p>
             <h3>決勝共催</h3>
             <p></p>
           </section>
