--- a/rule.html
+++ b/rule.html
@@ -16,13 +16,14 @@
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><a href="#">Schedule</a></li>
-        <li><a href="rule.html">Rules</a></li>
-        <li><a href="#">Software</a></li>
-        <li><a href="#">Entry</a></li>
-        <li><a href="#">Prelminary</a></li>
-        <li><a href="#">Final</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
+        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
@@ -32,14 +33,14 @@
     <section id="main">
       <h2>Game and AI</h2>
       <p>
-        Contestants compete their design and engineering skills of algorithms and 
-        AI strategies in addition to programming skills by creating AI program for 
-        a match-up game. The game uses "Auction" as its metaphor; each AI agent bids 
+        Contestants compete their design and engineering skills of algorithms and
+        AI strategies in addition to programming skills by creating AI program for
+        a match-up game. The game uses "Auction" as its metaphor; each AI agent bids
         and buys items while reading opponents.
       </p>
       <p>
         Contestants can use the following major programming languages for implementing their own AI:<br>
-        C, C++, C#, Java, Scala, Ruby, Python, Perl, PHP, Haskell and JavaScript. 
+        C, C++, C#, Java, Scala, Ruby, Python, Perl, PHP, Haskell and JavaScript.
       </p>
     </section>
 
@@ -58,7 +59,7 @@
 
             samurai2014-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
-            </p>        
+            </p>
             <h3>Final Round Cosponsor</h3>
             <p>(TBD)</p>
           </section>
