--- a/software-jp.html
+++ b/software-jp.html
@@ -19,6 +19,7 @@
         <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
         <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
@@ -36,7 +37,7 @@
         <li><a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>: AIプログラムのアーカイブファイルをzip, tar, tar.bz2, tar.gzのいずれかの形式で投稿してください。
         投稿方法の詳細についてはサーバ上の <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> を参照してください。
         <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">オンライン対戦サーバーで使用可能な言語一覧</a>: 計27のプログラミング言語をサポートしています。
-  
+
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a>:  C#, C++, Java, JavaScript, PHP, Python, Scalaの各言語用に用意しています。
       </ul>
     </section>
