--- a/tutorial-jp.html
+++ b/tutorial-jp.html
@@ -31,14 +31,76 @@
 </header>
 <hr/>
 
-    <section id="importantdates">
-      <h2>主要日程</h2>
-      <ul>
-        <li>ルール公開、応募受付開始：2014年11月14日</li>
-        <li><font color"red">オンライン予選応募締切　：2015年 1月11日 Anywhere On Earth（日本時間 1月12日 21:00）（延長しました）</font></li>
-        <li>オンライン予選結果発表　：2015年1月14日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
-      </ul>
+   <section id="main">
+      <h2>チュートリアル</h2>
+      <p>
+        このチュートリアルでは、AIプログラムを<a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>に投稿する手順を示します。
+      </p>
+      <hr>
+      <p>
+        <div>
+          まず、<a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>を開いて、サインアップ (Sign up) もしくはログイン (log in) します。
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/top.png"/>
+        </div>
+      </p>
+      <hr>
+      <p>
+        <div>
+          アカウントを作成（サインアップ）する際に、メールアドレスとチーム名を入力して下さい。
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/signup.png"/>
+        </div>
+      </p>
+      <hr>
+      <p>
+        <div>
+          コンテストの一覧を開き、"SamurAI Coding 2014 Practice"を探してクリックして下さい。
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/contests.png"/>
+        </div>
+      </p>
+      <hr>
+      <p>
+        <div>
+          AIプログラムのアーカイブファイルをフォームから投稿して下さい。
+          なお、サンプルAIプログラムはダウンロードできます。
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/submission_form.png"/>
+        </div>
+      </p>
+      <hr>
+      <p>
+        <div>
+          少し時間が経てば、あなたが投稿したAIプログラムの状態が表示されます。
+          表示されない場合は少し待ってからリロードして下さい。
+          コンパイルに成功した場合は、"COMPILED"をクリックして詳細を確認しましょう。
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/submissions.png"/>
+        </div>
+      </p>
+      <hr>
+      <p>
+        <div>
+          時間が経てば投稿したAIプログラムが他のAIプログラムと対戦します。
+          対戦後にページを開けば、リプレイを再生できます。
+          さぁ、やってみましょう！
+          <br /><br />
+        </div>
+        <div>
+          <img src="images/tutorial/submission.png"/>
+        </div>
+      </p>
     </section>
 
 <footer>
