--- a/final-jp.html
+++ b/final-jp.html
@@ -19,6 +19,7 @@
         <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
         <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
