--- a/final.html
+++ b/final.html
@@ -19,6 +19,7 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
         <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
