--- a/faq.html
+++ b/faq.html
@@ -57,16 +57,15 @@
         <td width="300">
           <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings</p>
-            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
-            <p>Indeed</p>
-            <p><img src="images/indeed.png" width="200"/></p>
-            <h3>Shogun Sponsor</h3>
-            (TBD)
-            <h3>Platinum Sponsor</h3>
-            (TBD)
+            <p>Recruit Holdings Co.,Ltd.</p>
+            <p><a href="http://www.recruit-rgf.com/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
+            <p>Indeed,Inc.</p>
+            <p><a href="http://www.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
             <h3>Gold Sponsors</h3>
-            (TBD)
+            <p>e-Seikatsu Co., Ltd.</p>
+            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="200" /></a></p>
+            <p>Hitachi, Ltd.</p>
+            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="200"/></a></p>
           </section>
         </td>
         <td>
