--- a/final-jp.html
+++ b/final-jp.html
@@ -134,13 +134,15 @@
         <td width="300">
           <section id="sponsors">
             <h3>イベントスポンサー</h3>
-            <p>リクルートホールディングス</p>
-            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
-            <p>Indeed</p>
-            <p><img src="images/indeed.png" width="200"/></p>
-            <h3>将軍スポンサー</h3>
-            <h3>プラチナスポンサー</h3>
+            <p>株式会社リクルートホールディングス</p>
+            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
+            <p>Indeed,Inc.</p>
+            <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
             <h3>ゴールドスポンサー</h3>
+            <p>株式会社いい生活</p>
+            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="200" /></a></p>
+            <p>株式会社日立製作所</p>
+            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="200"/></a></p>
           </section>
         </td>
         <td>
