Update banner ratio

--- a/index-jp.html
+++ b/index-jp.html
@@ -170,7 +170,7 @@
             <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
             <h3>ゴールドスポンサー</h3>
             <p>株式会社日立製作所</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a></p>
+            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
             <p>株式会社いい生活</p>
             <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
           </section>
@@ -198,6 +198,7 @@
             <h3>後援</h3>
             <p class="smaller">
               独立行政法人 情報処理推進機構<br>
+              経済産業省<br>
             </p>
           </section>
         </td>
