--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012 and 2013,
 aiming to cultivate the younger generation so they can become leading researchers,
 	developers and successful on global level
-	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
+	(<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
       <p>3rd SamurAI Coding will be held between September 2014 and March 2015.
 	Contestants will compete their engineering skills for AI game programming.
