--- a/index-jp.html
+++ b/index-jp.html
@@ -34,7 +34,7 @@
     <section id="main">
       <h2>情報処理学会 国際AIプログラミングコンテスト: SamurAI Coding 2014-15</h2>
       <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト
-	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました（<a href="2012photos.html">2012年度決勝の様子</a>、
+	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
       <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
 	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
