--- a/index-jp.html
+++ b/index-jp.html
@@ -139,7 +139,7 @@
     </section>
 
     <section id="committee">
-      <h2>委員会体制（2014.5現在）</h2>
+      <h2>委員会体制</h2>
 <p>鷲崎弘宜（早稲田大学, 委員長）, 竹内郁雄（東京大学名誉教授, エグゼクティブアドバイザー), 近山隆（東京大学名誉教授）,
 高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 松原仁（はこだて未来大学）, 坂本一憲（国立情報学研究所）,
 田中哲朗（東京大学）, 本田澄（早稲田大学）, 平石拓（京都大学）, 佐藤靖治（早稲田大学）,
