--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@ within Japan received full travel expenses.
             <p>Indeed,Inc.</p>
             <p><a href="http://www.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
       	    <h3>Gold Sponsors</h3>
+      	    <p>e-Seikatsu Co., Ltd.</p>
+            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
             <p>Hitachi, Ltd.</p>
             <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
-            <p>e-Seikatsu Co., Ltd.</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
       	  </section>
       	</td>
       	<td>
@@ -174,6 +174,8 @@ within Japan received full travel expenses.
               Academic Center for Computing and Media Studies, Kyoto University<br>
               International Information Science Foundation<br>
               The Korean Institute of Information Scientists and Engineers<br>
+              Information-technology Promotion Agency, Japan<br>
+              Ministry of Foreign Affairs of Japan
             </p>
           </section>
       	</td>
