--- a/schedule.html
+++ b/schedule.html
@@ -89,6 +89,8 @@
               Academic Center for Computing and Media Studies, Kyoto University<br>
               International Information Science Foundation<br>
               The Korean Institute of Information Scientists and Engineers<br>
+              Information-technology Promotion Agency, Japan<br>
+              Ministry of Foreign Affairs of Japan
             </p>
           </section>
         </td>
