--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -124,6 +124,7 @@
             <h3>後援</h3>
             <p class="smaller">
               独立行政法人 情報処理推進機構<br>
+              経済産業省
             </p>
           </section>
         </td>
