--- a/index-jp.html
+++ b/index-jp.html
@@ -39,6 +39,13 @@
       <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
 	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
+    <section id="sponsors">
+        イベントスポンサー <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a>
+        <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
+        ゴールドスポンサー
+        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+        <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
+    </section>
     <section id="news">
       <h2>ニュース</h2>
       <ul>
