--- a/index-jp.html
+++ b/index-jp.html
@@ -40,9 +40,8 @@
 	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     <section id="sponsors">
-        イベントスポンサー <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a>
+        スポンサー <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
         <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
-        ゴールドスポンサー
         <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
         <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
     </section>
