--- a/index-jp.html
+++ b/index-jp.html
@@ -40,7 +40,7 @@
 	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     <section id="sponsors">
-        スポンサー <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
+        <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
         <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
         <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
         <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
