--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ aiming to cultivate the younger generation so they can become leading researcher
 	Winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
 	Participating engineers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
+    <section id="sponsors">
+    <h2>Sponsors</h2>
+        <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
+        <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
+        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+        <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
+    </section>
     <section id="news">
       <h2>News</h2>
       <ul>
