--- a/index-jp.html
+++ b/index-jp.html
@@ -206,6 +206,7 @@
             <p class="smaller">
               独立行政法人 情報処理推進機構<br>
               経済産業省<br>
+              外務省
             </p>
           </section>
         </td>
