--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -91,7 +91,8 @@
             <h3>後援</h3>
             <p class="smaller">
               独立行政法人 情報処理推進機構<br>
-              経済産業省
+              経済産業省<br>
+              外務省
             </p>
           </section>
         </td>
