--- a/faq.html
+++ b/faq.html
@@ -86,6 +86,7 @@
               International Information Science Foundation<br>
               The Korean Institute of Information Scientists and Engineers<br>
               Information-technology Promotion Agency, Japan<br>
+              Ministry of Economy, Trade and Industry<br>
               Ministry of Foreign Affairs of Japan
             </p>
           </section>
