--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ within Japan received full travel expenses.
               International Information Science Foundation<br>
               The Korean Institute of Information Scientists and Engineers<br>
               Information-technology Promotion Agency, Japan<br>
+              Ministry of Economy, Trade and Industry<br>
               Ministry of Foreign Affairs of Japan
             </p>
           </section>
