--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+        <li>12月26日: オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます。その旨を明記しました。
         <li>12月13日: <a href="preliminary-jp.html">予選</a>および<a href="final-jp.html">決勝</a>の情報を公開しました。
         <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
         <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAIプログラム</a>を修正しました。
@@ -108,7 +109,8 @@
         <li>ルール公開、応募受付開始：2014年11月14日</li>
         <li><font color"red">オンライン予選応募締切　：2015年 1月11日 Anywhere On Earth（日本時間 1月12日 21:00）（延長しました）</font></li>
         <li>オンライン予選結果発表　：2015年1月14日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
+        <li>決勝用プログラム提出締切：2015年3月上旬（予定、オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます）</li>
+        <li>決勝（於 京都大学） 　　：2015年3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
 
