--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+        <li>Dec 26: Teams advanced to the World final round can revise their AI program for the World final round after the preliminary round. 
         <li>Dec 13: Information about the <a href="preliminary.html">preliminary round</a> and the <a href="final.html">final round</a> has been added.
         <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added.
       	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> have been resolved.
@@ -108,6 +109,7 @@ within Japan received full travel expenses.
       	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
       	<li><font color="red">Preliminary round submission due: January 11th, 2015 AoE (extended)</font></li>
       	<li>Preliminary round result announcement: January 14th, 2015</li>
+      	<li>Submission due for World final round: early in March, 2015 (TBD)(Teams advanced to World final can revise their program by this date.)</li>
         <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
       </ul>
     </section>
