--- a/index-jp.html
+++ b/index-jp.html
@@ -91,7 +91,7 @@
 <b>決勝出場者</b>
 
 <p>
-決勝における上位表彰者には総額10万円の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
+決勝における上位表彰者には総額10万円相当の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
 </p>
 
 
