--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      	<li>12月29日: 28日中にオンライン対戦サーバにおいてプログラム投稿にあたり不具合がありましたが、現在は復旧しています。
         <li>12月26日: オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます。その旨を明記しました。
         <li>12月13日: <a href="preliminary-jp.html">予選</a>および<a href="final-jp.html">決勝</a>の情報を公開しました。
         <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
