Fix logo margin.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <h2>Sponsors</h2>
         <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
         <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
-        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150" style="margin: 0px 10px;"/></a>
         <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
     </section>
     <section id="news">
