--- a/index-jp.html
+++ b/index-jp.html
@@ -43,7 +43,7 @@
     <h2>スポンサー</h2>
         <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
         <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
-        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150" style="margin: 0px 10px;"/></a>
         <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
     </section>
     <section id="news">
