--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@ within Japan received full travel expenses.
               International Information Science Foundation<br>
               The Korean Institute of Information Scientists and Engineers<br>
               Information-technology Promotion Agency, Japan<br>
-              Ministry of Economy, Trade and Industry<br>
-              Ministry of Foreign Affairs of Japan
-            </p>
+              The Ministry of Economy, Trade and Industry<br>
+              The Ministry of Foreign Affairs of Japan<br>
+              The Ministry of Education, Culture, Sports, Science and Technology
+             </p>
           </section>
       	</td>
       </tr>
