--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -107,7 +107,8 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
             <p class="smaller">
               独立行政法人 情報処理推進機構<br>
               経済産業省<br>
-              外務省
+              外務省<br>
+              文部科学省
             </p>
           </section>
         </td>
